webserver deployment-Service-Route.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: webserver-deployment
 namespace: "zlic-cwipf1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver-container
          image: ghcr.io/sauriler/html-page:v1
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webserver-page
  name: webserver-page
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webserver-page
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: webserver-page
  name: webserver-page
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: webserver-page
  tls:
    termination: edge   
    insecureEdgeTerminationPolicy: Redirect
